styles/styles.css
/* ... */
@font-face {
  font-family: open-sans;
  src: local('Arial');
  size-adjust: 107%;
  ascent-override: normal;
  descent-override: 32%;
  line-gap-override: normal;
}

html,
body {
  font-size: var(--body-font-size-xxs);
}

body {
  font: var(--type-body-1-default-font);
  letter-spacing: var(--type-body-1-default-letter-spacing);
  margin: 0;
  color: var(--color-black-100);
  background-color: var(--background-color);
  display: flex;
  flex-direction: column;
}

body:not(.appear) {
  visibility: hidden;
}

body:not(.appear) img:not(.dropin-image img) {
    display: none;
}

body.featured-pdp {
  background: linear-gradient(3deg, #DBBCFC -6.01%, #FFF 99.66%);
}


main {
  margin-top: 170px !important;
  flex: 1;
}

@media (width >= 768px) {
  main {
    min-height: calc(100vh - 362px);
  }
}

@media (width < 768px) {
  main {
    margin-top: 105px !important;
  }
}

h1 {
  font: var(--type-display-1-font);
  letter-spacing: var(--type-display-1-letter-spacing);
}

h2 {
  font: var(--type-display-2-font);
  letter-spacing: var(--type-display-2-letter-spacing);
}

h3 {
  font: var(--type-display-3-font);
  letter-spacing: var(--type-display-3-letter-spacing);
}

h4 {
  font: var(--type-headline-1-font);
  letter-spacing: var(--type-headline-1-letter-spacing);
}

h5 {
  font: var(--type-headline-2-strong-font);
  letter-spacing: var(--type-headline-2-strong-letter-spacing);
}

h6 {
  font: var(--type-headline-2-default-font);
  letter-spacing: var(--type-headline-2-default-letter-spacing);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  width: fit-content;
  margin: 0;
}

.section .default-content-wrapper h1,
.section .default-content-wrapper h2,
.section .default-content-wrapper h3,
.section .default-content-wrapper h4,
.section .default-content-wrapper h5,
.section .default-content-wrapper h6 {
  padding-bottom: 1rem;
}


/* .section .default-content-wrapper h1::after,
.section .default-content-wrapper h2::after,
.section .default-content-wrapper h3::after,
.section .default-content-wrapper h4::after,
.section .default-content-wrapper h5::after,
.section .default-content-wrapper h6::after {
  border-bottom: 2px solid var(--primary-color);
  content: '';
  display: block;
  padding-top: 8px;
  min-width: 84px;
  width: fit-content;
} */

.section.bg-primary .default-content-wrapper h1::after,
.section.bg-primary .default-content-wrapper h2::after,
.section.bg-primary .default-content-wrapper h3::after,
.section.bg-primary .default-content-wrapper h4::after,
.section.bg-primary .default-content-wrapper h5::after,
.section.bg-primary .default-content-wrapper h6::after {
  border-bottom: 2px solid var(--secondary-color);
}

.section.full-width {
  padding-inline: 0;
}

.section.bg-primary {
  background-color: var(--primary-color);
  color: var(--secondary-color);
}

.section.bg-secondary {
  background-color: var(--secondary-color);
}

.section.align-right .default-content-wrapper,
.section.align-right .default-content-wrapper p,
.section.align-right .default-content-wrapper h1,
.section.align-right .default-content-wrapper h2,
.section.align-right .default-content-wrapper h3,
.section.align-right .default-content-wrapper h4,
.section.align-right .default-content-wrapper h5,
.section.align-right .default-content-wrapper h6 {
  text-align: right;
  margin-left: auto;
}

.section.align-center .default-content-wrapper,
.section.align-center .default-content-wrapper p,
.section.align-center .default-content-wrapper h1,
.sectionalign-center .default-content-wrapper h2,
.section.align-center .default-content-wrapper h3,
.section.align-center .default-content-wrapper h4,
.section.align-center .default-content-wrapper h5,
.section.align-center .default-content-wrapper h6 {
  text-align: center;
  margin: auto;
}

p,
dl,
ol,
ul,
pre,
blockquote {
  margin-top: 1.5625em;
  margin-bottom: 1.5625em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--color-neutral-300);
}

code,
pre,
samp {
  font: var(--type-body-2-default-font);
  letter-spacing: var(--type-body-2-default-letter-spacing);
  font-family: var(--type-fixed-font-family);
}

code,
samp {
  padding: 0.125em;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--color-neutral-300);
  padding: 1em;
  border-radius: 0.25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link.button {
  width: fit-content;
  padding: 8px;
  padding-inline: 30px;
  background-color: #000;
  border-radius: 30px;
  color: #fff;
  font-weight: 400;
}

a:any-link.button:hover {
  text-decoration: solid underline var(--color-brand-700);
}

a:any-link.button:not(.primary,.secondary) {
  display: block;
  padding: 1rem 0;
  background-color: unset;
  color: inherit;
}

/* links */
a:any-link {
  color: var(--color-black-100);
  font: var(--type-body-1-strong-font);
  letter-spacing: var(--type-body-1-strong-letter-spacing);
  text-decoration: none;
}

a:not(.dropin-design a):hover {
  text-decoration: solid underline var(--color-brand-700);
  text-underline-offset: 6px;
  color: var(--color-brand-700);
}

a:not(.dropin-design a):focus-visible {
  outline: solid var(--shape-border-width-4) var(--color-neutral-400);
  border: var(--shape-border-width-1) solid var(--color-neutral-800);
  border-radius: var(--shape-border-radius-1);
}

u {
  text-underline-offset: 6px;
}

a > u,
button.button > u {
  text-decoration: none;
}

button {
  border: none;
  font: var(--type-base-font-family);
}

button.button-primary,
a.button.primary,
a.button-primary,
a.button.error-button-home {
  display: block;
  background-color: var(--primary-color);
  font-size: var(--body-font-size-md);
  font-weight: 600;
  color: var(--color-neutral-50);
  padding: 8px 30px;
  width: fit-content;
  height: auto;
  letter-spacing: 0.08em;
  box-sizing: border-box;
  text-decoration: none;
  text-align: center;
  margin: 15px 0;
  text-transform: uppercase;
  border-radius: 24px;
}
/* ... */

